# LightEXT

./: CMakeLists.txt  README.md
src/: lext.cpp  lext.h  lext.hpp  main.cpp  reader.cpp
